Fix items alignment for safari browser

--- a/sources/easygenerator.Web/Content/learningPaths.less
+++ b/sources/easygenerator.Web/Content/learningPaths.less
@@ -71,6 +71,7 @@
     width: 200px;
     margin-right: 5.12%;
     margin-bottom: 20px;
+    vertical-align: top;
 
     &:nth-of-type(4n) {
         margin-right: 0;
